# auto-invoice

./: .gitignore  design.md  example.md  glm4.6v.md  glmkey.md
backend/: .env  invoices.db  pyproject.toml
backend/app/: config.py  main.py
backend/app/models/: invoice.py
backend/app/routers/: invoice.py
backend/app/schemas/: invoice.py
backend/app/services/: excel_export.py  glm_service.py  invoice_parser.py  voucher_service.py
backend/logs/: glm_details.jsonl
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/api/: invoice.ts
frontend/src/components/: InvoiceTable.vue  InvoiceUpload.vue  SummaryPanel.vue  VoucherModal.vue
frontend/src/stores/: invoice.ts
frontend/src/types/: invoice.ts
